2023-05-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (PKL_GEN_PUSH_CONTEXT): Emit error instead of
	aborting if maximum nesting level is reached.
	* libpoke/pkl-anal.c (PKL_ANAL_PUSH_CONTEXT): Likewise.
	* testsuite/poke.pkl/maxnest-diag-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-05-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-env.c (pkl_env_iter_next): Skip re-defined
	declarations.
	(pkl_env_iter_begin): Likewise.

2023-05-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (deftype): Do not share identifier node
	between declaration and types.
	* testsuite/poke.pkl/deftype-2.pk: New test.
	* testsuite/poke.pkl/deftype-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (check_struct_field_constraint): Get STRICT
	as an argument in the stack and use it after executing the
	constraint.
	(handle_struct_field_constraints): Let
	check_struct_field_constraint handle STRICT.
	(struct_constructor): Pass a STRICT to
	check_struct_field_constraint.
	* testsuite/poke.map/nsmap-7.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
	* doc/poke.texi (Working with Incorrect Data): Document new
	behavior.

2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Auto-complete fields foo->bar): New entry.

2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (find_field_referrer): New function.

2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Alien tokens for IO space names: $<path/to/file>):
	Remove as done.
	(Auto-complete $<...> in the prompt): New todo.

2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pvm/pvm-insns-test.pk: Add tests for instructions
	`sconc', `and', `or', and `not'.

2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>a

	* libpoke/pkl-promo.c (promote_array): Fix bounded array fast
	path.